Bug 1507413 - Increase number of media streams supported by sipcc; r=bwc

This also removes SDP_MAX_LINE_LEN which is unused.

Differential Revision: https://phabricator.services.mozilla.com/D12472